<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <ImageView
            android:id="@+id/backWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@null"
            android:src="@color/white"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/backBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@null"
            android:src="@color/black"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/toolbarRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20_sp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_marginTop="@dimen/spacing_10_sp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="?colorError"
                    android:textSize="@dimen/text_size_21"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_margin="@dimen/spacing_15_sp"
                android:layout_weight="1.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_10_sp"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:textColor="?colorError"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_email"
                        android:drawablePadding="@dimen/spacing_5_sp"
                        app:drawableTint="?colorError" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_20_sp"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/emailEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:background="@drawable/button"
                            android:hint="@string/email_example"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:padding="@dimen/spacing_15_sp"
                            android:textColor="?colorError"
                            android:textColorHint="?colorError"
                            android:textSize="@dimen/text_size_14"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_10_sp"
                        android:gravity="center_vertical"
                        android:text="@string/password"
                        android:textColor="?colorError"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_lock"
                        android:drawablePadding="@dimen/spacing_5_sp"
                        app:drawableTint="?colorError" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="?colorError">

                        <EditText
                            android:id="@+id/passwordEt"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacing_50_sp"
                            android:autofillHints="password"
                            android:background="@drawable/button"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:paddingHorizontal="@dimen/spacing_20_sp"
                            android:textColor="?colorError"
                            android:textColorHint="?colorError"
                            android:textSize="@dimen/text_size_14"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/spacing_15_sp">

                        <TextView
                            android:id="@+id/forget"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button3"
                            android:backgroundTint="@color/black"
                            android:gravity="center"
                            android:padding="@dimen/spacing_10_sp"
                            android:text="@string/forget_password"
                            android:textColor="@color/white" />

                        <View
                            android:layout_width="@dimen/spacing_10_sp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/noAccount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button3"
                            android:backgroundTint="?mc_track"
                            android:gravity="center"
                            android:padding="@dimen/spacing_10_sp"
                            android:text="@string/new_user_signup"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.5"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/loginBtn"
                    android:layout_width="@dimen/button_size_large"
                    android:layout_height="@dimen/button_size_large"
                    android:layout_margin="@dimen/spacing_20_sp"
                    android:background="@drawable/button2"
                    android:contentDescription="@string/cd_login"
                    android:rotation="180"
                    android:src="@drawable/ic_back"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>